# sci-demo

./: .gitignore  CMakeLists.txt
.github/workflows/: mr-pipeline.yml
examples/: CMakeLists.txt  e2e_curve_fit.cpp
src/: CMakeLists.txt  curve_fit.cpp  curve_fit.h  curve_fitting.cpp  curve_fitting.h  derivative.cpp  derivative.h  integration.cpp  integration.h
tests/: CMakeLists.txt  test_curve_fit.cpp  test_curve_fitting.cpp  test_derivative.cpp  test_integration.cpp
wiki/: Home.md
